js/src/tests/test262/language/expressions/class/elements/syntax/early-errors/invalid-names/method-call-expression-bad-reference.js
DONOTEVALUATE
(
)
;
var
C
=
class
{
m
(
)
{
(
(
)
=
>
{
}
)
(
)
.
#
x
}
}
;
